# Apex

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  ChangeLog.md  README.md  SECURITY.md  bottleneck.py  eval.py  export_rl_dataset.py  kernel_bottleneck.py  knowledge_base.json  leaderboard.py  mcp_config.json  pipeline.py  reflector.py  requirements-eval.txt  setup.sh  trajectory.py  workload_optimizer.py
.github/: CODEOWNERS
agents/: __init__.py  backends.py
docker/: Dockerfile.eval  Dockerfile.grader  Dockerfile.mcp  Dockerfile.workload  start-mcps.sh
examples/: benchmark_command_template.yaml  benchmark_fastvideo_wan_t2v_local_template.yaml  benchmark_fastvideo_wan_t2v_template.yaml
files/: gluon_vector_add_baseline.py  setup_files.sh  triton_rms_norm_baseline.py
graders/: README.md  cache_manager.py  config_generator.py  curriculum.py  ground_truth.py  ground_truth_templates.py  kernel_grader.py  model_grader.py  reward_backends.py  reward_fn.py  reward_trace.py  score.py  testcase_generator.py
k8s/: namespace.yaml
pipeline/: __init__.py  export_rl_dataset.py  kernel_bottleneck.py  knowledge_base.py  leaderboard.py  reflector.py  trajectory.py
prompts/: claude_code_gptoss20b_full_pipeline.txt  configs.py  env_policy_prompt.py  kernel_prompt.py  model_prompt.py  models.py
scripts/: aggregate_gluon_eval_report.py  run_gluon_agent_eval.sh
tools/mcps/fusion_advisor/: pyproject.toml  server.py  setup.sh
tools/mcps/gpu_info/: pyproject.toml  server.py  setup.sh
tools/mcps/rag_tool/: __init__.py  index.py  pyproject.toml  server.py  setup.sh
tools/mcps/source_finder/: pyproject.toml  server.py  setup.sh
(+104 files in other folders)
