[project]
name = "mcp-fusion-advisor"
version = "1.0.0"
description = "MCP server for detecting kernel fusion opportunities"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
