[project]
name = "mcp-gpu-info"
version = "1.0.0"
description = "MCP server for querying GPU architecture info and optimization hints"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
