[project]
name = "mcp-rag-tool"
version = "1.0.0"
description = "Multi-retriever RAG MCP server for AMD GPU kernel optimization"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pymupdf>=1.24.0",
    "pdfplumber>=0.10.0",
    "chromadb",
    "sentence-transformers",
    "tiktoken",
    "rich",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
