[project]
name = "mcp-source-finder"
version = "1.0.0"
description = "MCP server for finding kernel source code from trace signatures"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
